[package]
name = "insight"
version = "1.1.5"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "host, edit and publish markdown posts"
license = "MIT"
categories = [ "template-engine" ]
keywords = [ "markdown" ]
repository = "https://github.com/NathanRoyer/insight"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
tiny_http = "0.12.0"
json = "0.12.4"
base64 = "0.13.0"
html-escape = "0.2.11"
rand = "0.8.5"
