[package]
name = "insight"
version = "1.4.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "host, edit and publish markdown articles"
license = "MIT"
categories = [ "template-engine" ]
keywords = [ "markdown" ]
repository = "https://github.com/NathanRoyer/insight"
readme = "README.md"

[dependencies]
dns-parser = "0.8.0"
rsa = "0.7.1"
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
tiny_http = "0.12.0"
json = "0.12.4"
base64 = "0.13.0"
html-escape = "0.2.11"
rand = "0.8.5"

[dependencies.lettre]
version = "0.10.1"
default-features = false
features = [ "smtp-transport", "dkim", "rustls-tls", "builder" ]
